# mandelbrot-generator

./: CMakeLists.txt  build.sh  config.ini  run.sh
src/: Calculator.cpp  Calculator.hpp  ColoringStrategy.hpp  Config.cpp  Config.hpp  Data.cpp  Data.hpp  EscapeTimeAlgo.hpp  GeneratingStrategy.cpp  GeneratingStrategy.hpp  Generator.cpp  Generator.hpp  Image.cpp  Image.hpp  MySQLQuery.cpp  MySQLQuery.hpp  MySQLQueryTypes.cpp  MySQLQueryTypes.hpp  MySQLStore.cpp  MySQLStore.hpp  error.cpp  error.hpp  helper.hpp  main.cpp  types.hpp
src/ColoringStrategies/: ColoringStrategyBasicDistanceEstimation.cpp  ColoringStrategyBasicDistanceEstimation.hpp
src/EscapeTimeAlgos/: EscapeTimeAlgoDistanceEstimation.cpp  EscapeTimeAlgoDistanceEstimation.hpp  EscapeTimeAlgoIterationOnly.cpp  EscapeTimeAlgoIterationOnly.hpp
src/GeneratingStrategies/: GeneratingStrategyRandomZoom.cpp  GeneratingStrategyRandomZoom.hpp
src/MySQLQueries/: MySQLQueryCreateImageTable.cpp  MySQLQueryCreateImageTable.hpp  MySQLQueryInsertImage.cpp  MySQLQueryInsertImage.hpp
